# BPCP

./: .editorconfig  README.md
Lecture1/: ChangeLog.md  bin2c.c
Lecture2/libubox-refactor/: CMakeLists.txt
Lecture2/libubox-refactor/src/lib/blob/: blobmsg_json.c
Lecture2/libubox-refactor/src/lib/include/: ubox-uloop.h
Lecture2/libubox-refactor/src/lib/ulog/: ulog.c
Lecture2/libubox-refactor/src/lib/usock/: usock.c
Lecture3/: bin2c.c
Lecture3/libubox-refactor/: CMakeLists.txt
Lecture3/libubox-refactor/src/lib/crypto/: base64.c
Lecture3/libubox-refactor/src/lib/include/: ubox-blobmsg.h  ubox-json_script.h
Lecture3/libubox-refactor/src/lib/uloop/: uloop.c
Lecture3/libubox-refactor/src/lua/: uloop.c
Lecture4/: CMakeLists.txt  isCkeyword.c
Lecture4/cmake/: FindGlib2.cmake
Lecture5/source/: CMakeLists.txt
Lecture5/source/cmake/: FindGLIB.cmake  GlobalCCache.cmake  GlobalCommon.cmake  GlobalCompilerFlags.cmake  GlobalDist.cmake  GlobalFS.cmake  GlobalFeatures.cmake  GlobalFindPackage.cmake  GlobalMacros.cmake  GlobalPackaging.cmake  OptionsAppleWin.cmake  OptionsCommon.cmake  OptionsLinux.cmake  OptionsMSVC.cmake  OptionsMac.cmake  OptionsWin.cmake  OptionsWindows.cmake
Lecture5/source/libubox/: CMakeLists.txt
Lecture5/source/libubox/include/: CMakeLists.txt  ubox-utils.h
Lecture5/source/libubox/lib/: CMakeLists.txt
Lecture5/source/libubox/lib/avl/: avl.c
Lecture5/source/libubox/lib/blob/: blob.c  blobmsg_json.c
Lecture5/source/libubox/lib/crypto/: md5.c
Lecture5/source/libubox/lib/ulog/: ulog.c
Lecture5/source/libubox/lib/uloop/: uloop.c
Lecture5/source/libubox/lib/util/: utils.c
Lecture5/source/libubox/tests/: test-b64.c
Lecture5/source/libubox/tests/cram/: test_base64.t
Lecture5/source/libubox/tests/cram/inputs/: json-script.json
